# quark

./: CMakeLists.txt  README.md
res/shader/: basic.shader
src/: main.c  main.cpp
